# dtool-lookup-server-search-plugin-mongo

./: CHANGELOG.rst  README.rst  pyproject.toml  setup.cfg
.github/workflows/: test.yml
dtool_lookup_server_search_plugin_mongo/: config.py  utils_search.py
tests/: conftest.py  test_config_route.py  test_utils_search_standalone.py
